tests/cases/fail/linq_sequence_wrong_arg.cs
class Program {
    static void Main() {
        List<int> xs = new List<int>();
        xs.Add(1);
        int a = xs.ElementAtOrDefault(true);
        Console.WriteLine(a);
    }
}
